@@ -1,3 +1,13 @@
+2010-06-22  Alan McGovern  <amcgovern@novell.com>
+
+	* deployment.cpp: Add some more useful output to ReportLeaks
+	  so we can see the number of leaked objects grouped by type.
+	  We also now print out the leak report multiple times so we
+	  can see the number of 'leaked' objects before disposing the
+	  mono runtime and after disposing it. This allows us to
+	  trivially see objects which have been kept alive longer than
+	  they should've been.
+
 2010-06-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* pipeline-ffmpeg.cpp: Signal the wait_mutex too when shutting down the ffmpeg
